# ci_cpp_demo

./: CMakeLists.txt  Dockerfile
.github/workflows/: blank.yml
src/: CMakeLists.txt  add.cpp  add.hpp
test/: CMakeLists.txt  test_add.cpp
